Vercel 126 hatasi icin build komutuna temizleme adimi eklendi

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "vite --host :: --port 3000",
-    "build": "vite build",
+    "build": "npm run clean && vite build",
+    "clean": "rm -rf dist",
     "preview": "vite preview --host :: --port 3000"
   },
   "dependencies": {
