--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-helmet": "^6.1.0",
     "recharts": "^2.8.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.3",
