--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview --host :: --port 3000"
   },
   "dependencies": {
+    "@capacitor/app": "^8.0.0",
+    "@capacitor/browser": "^8.0.0",
     "@capacitor/cli": "^8.0.0",
     "@capacitor/core": "^8.0.0",
     "@capacitor/ios": "^8.0.0",
